--- a/index.html
+++ b/index.html
@@ -1,21 +1,19 @@
 <!doctype html>
 
-<!-- this is a comment for human! -->
-
 <html lang="en">
 
   <header>
     <title>Sylvain Ekouato's Portal</title>
     <link rel="stylesheet" href="css/master.css">
     <link rel="FaviconIcon" href="favicon.ico" type="image/x-icon">
-    <link rel="shortcut" href="fqvicon.ico" type="image/x-icon">
+    <link rel="shortcut" href="favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="name" content="Sylvain Ekouato's Portal">
     <meta name="robots" content="noindex, nofollow">
   </header>
 
   <body>
-     <img src="images/banner.jpg" width="75%" alt="banner">
+     <img src="images/profil1.png" width="75%" alt="profil1">
     <h1>Sylvain Ekouato's Portal</h1>
     <h2>About Me</h2>
     <p>I am a current student in International communication at the University of Modena.</p>
